Fix WebKit page loading bug

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -32,7 +32,7 @@ html {
     > body {
         gap: 5rem;
 
-        &:has(> main:empty) {
+        &.loading {
             display: none;
         }
 
